# molt-client

./: .gitignore  .onboarding-summary.md  ACCESSIBILITY_TESTING.md  APP_STORE_STRATEGY.md  ARCHITECTURE.md  BEFORE_AFTER_COMPARISON.md  CHANGELOG.md  CHANGELOG_UPDATER.md  CONTRIBUTING.md  DOCS_ACCURACY_REVIEW.md  DOCS_OVERHAUL_COMPLETE.md  ENCRYPTION.md  ERROR_UX_IMPROVEMENTS.md  FEATURES.md  GATEWAY_PROTOCOL_LOG.md  GROWTH_STRATEGY.md  HONEST_ASSESSMENT.md  ICON_COMPARISON.md  ICON_TAHOE_IMPLEMENTATION.md  KEYBOARD_NAV_COMPLETE.md  LICENSE  LOBSTER_REDESIGN_SUMMARY.md  MACOS_FREEZE_FIX.md  MACOS_INTEGRATION.md  MACOS_TAILSCALE_FIX.md  NEXT_FEATURES.md  OFFLINE_CAPABILITIES.md  ONBOARDING.md  ONBOARDING_REDESIGN.md  PERFORMANCE_BENCHMARKS.md  PRESS_KIT.md  PRODUCT_REVIEW.md  PROTOCOL_VERIFICATION.md  QA-PASS-2.md  QA-PASS-3-FINAL.md  QA_EDGE_CASES.md  QUALITY_ISSUES.md  QUALITY_REVIEW.md  README.md  REAL_ISSUES.md  (+18 more)
.github/: CICD.md  CODE_SIGNING.md  FUNDING.yml  README.md  dependabot.yml  social-preview.html
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  question.yml
.github/workflows/: ci.yml  e2e.yml  release.yml
docs/: ANALYTICS_DESIGN.md  ARCHITECTURE_DECISIONS.md  COMPETITIVE_ANALYSIS.md  DEMO_MODE_DESIGN.md  DEVELOPMENT.md  GATEWAY-PROTOCOL.md  ROADMAP.md  SETUP_SIGNING.md  UPDATER.md  USER_SCENARIOS.md
docs/wiki/: Getting-Started.md  Home.md  _ITERATION_LOG.md
e2e/: basic.spec.ts  messaging.spec.ts  onboarding.spec.ts  performance.spec.ts  settings-flows.spec.ts  settings.spec.ts  visual-flows.spec.ts  visual-helpers.ts
scripts/: build-stats.ps1  generate-icons.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: discovery.rs  gateway.rs  keychain.rs  lib.rs  main.rs  menu.rs  protocol.rs  tray.rs  updater.rs
src/__tests__/: component-integration.test.tsx  db.test.ts  encryption-edge-cases.test.ts  errors.test.ts  image-renderer.test.tsx  integration.test.ts  keychain.test.ts  message-flow.test.ts  performance.test.ts  performance.test.tsx  settings-persistence.test.ts  store-race-conditions.test.ts  theme-switching.test.ts
src/components/: ChatInput.test.tsx  ChatInput.tsx  ChatView.tsx  CodeBlock.tsx  CommandPalette.tsx  ExportDialog.tsx  ImageRenderer.tsx  KeyboardShortcutsDialog.tsx  MarkdownRenderer.tsx  MessageBubble.test.tsx  MessageBubble.tsx  SearchDialog.tsx  SettingsDialog.tsx  Sidebar.test.tsx  Sidebar.tsx  UpdateNotification.tsx  WelcomeView.tsx
src/components/onboarding/: OnboardingFlow.tsx  index.ts
src/components/onboarding/steps/: DetectionStep.tsx  FeatureTourStep.tsx  GatewayExplainerStep.tsx  GatewaySetupStep.tsx  NoGatewayStep.tsx  SuccessStep.tsx  WelcomeStep.tsx
src/components/ui/: button.tsx  confirm-dialog.tsx  skeleton.tsx  spinner.tsx  toast.tsx  tooltip.tsx
src/lib/: constants.ts  db.ts  encryption.ts  errors.ts  export.test.ts  export.ts  formatting.test.ts  invoke-with-timeout.ts  keychain.ts  persistence.ts  platform.ts  useFocusTrap.ts  utils.ts
src/stores/: store.ts
src/test/: setup.ts
